[package]
name = "galileo-mvt"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-mvt"
description = "Mapbox Vector Tile format reader"
readme = "../README.md"
exclude = ["test-data/*"]

[features]
default = []

[dependencies]
bytes = "1.7.2"
prost = "0.13.2"
galileo-types = { path = "../galileo-types", version = "0.1.1" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
geozero = { version = "0.13.0", features = ["with-mvt"] }

[build-dependencies]
prost-build = "0.12.6"
