[package]
name = "galileo-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-types"
description = "Trait based geo geometries and algorithms"
readme = "../README.md"

[features]
default = ["geo-types", "geodesy"]

[dependencies]
num-traits = "0.2.19"
nalgebra = "0.33.2"
serde = { version = "1.0.214", features = ["derive"] }
geodesy = { version = "0.13.0", optional = true }
geo-types = { version = "0.7.13", optional = true }
geojson = { version = "0.24.1", optional = true }
thiserror = "2.0.1"
