[package]
name = "feature_layers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
winit = { version = "0.30.5", features = ["rwh_05"] }
galileo = { path = "../../galileo" }
galileo-types = { path = "../../galileo-types" }
serde = { version = "1.0.213", features = ["derive"] }
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.95"
log = "0.4.22"
wasm-bindgen-futures = "0.4.45"
js-sys = { version = "0.3.72" }
geojson = "0.24.1"
csv = "1.3.0"
web-sys = { version = "0.3.72", features = ["Document", "Window", "Element"] }
num-traits = "0.2.19"
