[package]
name = "raster_tiles_android"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = [
  "aarch64-linux-android",
  "armv7-linux-androideabi",
  "x86_64-linux-android",
  "i686-linux-android",
]

[dependencies]
galileo = { path = "../../../galileo" }
galileo-types = { path = "../../../galileo-types" }
log = "0.4.22"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }

# Use this version until https://github.com/sfackler/rust-openssl/issues/2163 is fixed
# Issue is still open 2024-10-23 - crumplecup
openssl-sys = "<=0.9.92"
# openssl-sys = "0.9.104"
lazy_static = "1.5.0"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
android_logger = "0.14.1"
winit = { version = "0.30.5", features = ["android-native-activity"] }
