[package]
edition = "2021"
name = "with_egui"
version = "0.1.0"

[[bin]]
name = "with_egui"

[dependencies]
egui = { git = "https://github.com/emilk/egui", version = "0.28.1" }
egui-wgpu = { git = "https://github.com/emilk/egui", version = "0.28.1" }
egui-winit = { git = "https://github.com/emilk/egui", version = "0.28.1" }
# egui-wgpu = { version = "0.28.1", features = ["winit"] }
# egui-winit = { version = "0.28.1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
galileo = { path = "../../../galileo" }
galileo-types = { path = "../../../galileo-types" }
wgpu = { version = "22.1.0", default-features = false }
winit = { version = "0.30.5", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40.0", default-features = false, features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui-winit]
version = "0.28.1"
git = "https://github.com/emilk/egui"
features = ["clipboard", "links", "wayland", "x11"]
