[package]
edition = "2021"
name = "with_egui"
version = "0.1.0"

[[bin]]
name = "with_egui"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["from"] }
# egui = { version = "0.29.1" }
# egui-wgpu = { version = "0.29.1" }
# egui-winit = { version = "0.29.1" }
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui-winit = { git = "https://github.com/emilk/egui" }
# egui-wgpu = { version = "0.28.1", features = ["winit"] }
# egui-winit = { version = "0.28.1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
galileo = { path = "../../../galileo" }
galileo-types = { path = "../../../galileo-types" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = { version = "23.0.0", default-features = false }
winit = { version = "0.30.5", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", default-features = false, features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui-winit]
git = "https://github.com/emilk/egui"
features = ["clipboard", "links", "wayland", "x11"]
